Try fix nav color on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,17 @@
   //background-color: rgba(252, 233, 121, 1);
 }
 
+body {
+  background-color: rgba(240, 240, 240, 1);
+}
+
 h1 {
   font-weight: 700;
   font-size: 3rem;
+}
+
+nav {
+  background-color: #004f3b;
 }
 
 .logo-div {
